--- a/src/app/home/navbar/navbar.component.html
+++ b/src/app/home/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<div class="container col-md-12 col-xs-12 col-sm-12 col-lg-12">
-  <div class="row">
+<div class="container-fluid col-md-12 col-xs-12 col-sm-12 col-lg-12">
+  <div class="row" >
 
     <div class="left hidden-xs col-sm-6 col-md-6 col-lg-6">
       <div class="row">
