--- a/src/app/home/right-c/right-c.component.html
+++ b/src/app/home/right-c/right-c.component.html
@@ -1,8 +1,22 @@
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-  <div class="row">
+<div class="container col-xs-12 col-sm-12 col-md-12 col-lg-12">
+<div class="row firstRow">
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="row">
 
-<h1  #title  >{{helloWorld}}</h1>
+      <h1  class="col-sm-6 col-md-6 col-lg-6 ">{{helloWorld}}</h1>
+
+
+    </div>
 
   </div>
+</div>
+  <div class="row">
 
+    <h3 class="col-sm-6 col-md-6 col-lg-6 " >
+      Work with technical staff and other internal colleagues to meet customer needs.
+      Arrange and participate in internal and external client debriefs.
+      Organize events and seminars to introduce and promote the company's product to the market
+    </h3>
+
+  </div>
 </div>
