--- a/src/app/contact/right-c/right-c.component.html
+++ b/src/app/contact/right-c/right-c.component.html
@@ -3,7 +3,7 @@
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <div class="row">
 
-      <h1  class="page-header col-sm-6 col-md-6 col-lg-6 ">{{helloWorld}}</h1>
+      <h1  class="page-header col-sm-12 col-md-12 col-lg-12 ">I will replay asap!</h1>
 
 
     </div>
@@ -12,11 +12,43 @@
 
   <div class="row">
 
-    <h3 class="col-sm-12 col-md-12 col-lg-12 " >
-      Work with technical staff and other internal colleagues to meet customer needs.
-      Arrange and participate in internal and external client debriefs.
-      Organize events and seminars to introduce and promote the company's product to the market
-    </h3>
+    <form class="col-xs-offset-1 col-xs-10" [ngStyle]="{height:formHeight+'px'}">
+      <div class="col-xs-offset-1 col-xs-10 ">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="your name ...">
+          <span class="input-group-btn">
+        <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></button>
+      </span>
+        </div>
+      </div>
+      <div class="col-xs-offset-1 col-xs-10 ">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="your Email ...">
+          <span class="input-group-btn">
+        <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></button>
+      </span>
+        </div>
+      </div>
+      <div class="col-xs-offset-1 col-xs-10 ">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="your website ...">
+          <span class="input-group-btn">
+        <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span></button>
+      </span>
+        </div>
+      </div>
+      <div class="col-xs-offset-1 col-xs-10 ">
+
+        <textarea type="text" class="col-xs-10 form-control" placeholder="Search for..."  [ngStyle]="{height:(formHeight-342)+'px'}" ></textarea>
+
+
+      </div>
+      <div class="col-xs-offset-1 col-xs-12 ">
+
+        <button class="btn btn-default col-xs-offset-7 col-xs-3" type="button"><span class="glyphicon glyphicon-send" aria-hidden="true"></span></button>
+      </div>
+
+    </form>
 
   </div>
 </div>
