--- a/src/app/contact/left-c/left-c.component.html
+++ b/src/app/contact/left-c/left-c.component.html
@@ -2,7 +2,7 @@
 
   <div class="row ">
 
-      <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 pic" #pic [ngStyle]="{height:newInnerHeight}">
+      <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 pic" #pic [ngStyle]="{height:newInnerHeight}" [ngClass]="{'smallPic':ifSmallWindow}">
 
 
       </div>
