--- a/src/app/contact/right-c/right-c.component.css
+++ b/src/app/contact/right-c/right-c.component.css
@@ -13,7 +13,7 @@ h1
 .container
 {
 
-  padding-bottom: 100px;
+
 }
 .input-group
 {
@@ -22,6 +22,19 @@ h1
 }
 textarea{
 
-
+min-height: 90px;
   margin-bottom: 8px;
+}
+.formWrapper{
+
+
+}
+.changeHover:hover{
+background-color:   rgb(255, 214, 9);;
+
+}
+form
+{
+  padding-bottom:20px;
+
 }
