--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,8 +1,8 @@
-<div class=" col-xs-12 col-md-12 col-lg-12 container" (mousemove)="circleMarginer($event)">
+<div class=" col-xs-12  col-md-12 col-lg-12 container" (mousemove)="circleMarginer($event)">
   <div class="row">
-    <div class=" col-xs-6 col-md-6 col-lg-6 Llogo">
+    <div class=" hidden-xs hidden-sm col-md-6 col-lg-6 Llogo">
       <div class="row ">
-        <div class=" col-xs-offset-5 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-10 col-md-6 col-sm-6 col-lg-6 kreisWrapper">
+        <div class="  col-xs-offset-2 col-md-offset-3 col-lg-offset-3 col-xs-10 col-md-6  col-lg-6 kreisWrapper">
           <div class="row"  >
             <div class="col-sm-offset-8 col-xs-offset-5 kreis" [ngStyle]="{marginTop:dynamicMargin%15+'px',marginLeft:dynamicMargin%40+'px'}"></div>
             <div class="col-sm-offset-1 col-xs-offset-3 kreis " [ngStyle]="{marginTop:dynamicMargin%20+'px',marginLeft:-dynamicMargin%30+'px'}" style="height:15px;width:15px;"></div>
@@ -17,8 +17,8 @@
         </div>
       </div>
     </div>
-    <div class="col-xs-6 col-md-6 col-lg-6 Rtext">
-      <h1 class=" page-header" Style="font-size:40px;color:#212121;" ><strong Style="color:rgb(253,224,19);">Hela</strong>nodes</h1>
+    <div class="col-xs-12 col-md-6 col-lg-6 Rtext">
+      <h2 class=" page-header" Style="font-size:40px;color:#212121;" ><strong Style="color:rgb(253,224,19);">Hela</strong>nodes</h2>
       <p>
         NODE+ (wireless sensor platform) is a first-generation handheld sensor measuring 1 inch in diameter and 3.75 inches wide that communicates wirelessly through low-energy Bluetooth 4.0 with Apple iOS devices.[1][2]
         NODE+ has been attributed in the media as a Swiss Army knife of sensors,[3] similar in appearance to the tricorder from Star Trek,[4] and as a powerhouse of quality sensors[5] that can measure anything.[6]
@@ -29,20 +29,20 @@
   </div>
 </div>
 
-<div class=" col-xs-12 col-md-12 col-lg-12 container"  (mousemove)="circleMarginer($event)">
+<div class=" col-xs-12  col-md-12 col-lg-12 container"  (mousemove)="circleMarginer($event)">
   <div class="row" style="background-color:#212121;">
-    <div class=" col-xs-6 col-md-6 col-lg-6 Llogo">
+    <div class=" hidden-xs hidden-sm col-md-6 col-lg-6 Llogo">
       <div class="row ">
-        <div class=" col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-10 col-md-6 col-sm-6 col-lg-6">
+        <div class="   col-md-offset-3 col-lg-offset-3 col-xs-12 col-md-6  col-lg-6">
           <div class="row">
-            <p class="col-xs-12 pl" Style="font-size:40px;color:#f5f5f5; " ><strong Style="color:rgb(253,224,19);">Mo </strong> <i class="material-icons" style="color:#f5f5f5;font-size:40px;">mic</i> cast </p>
+            <p class="col-xs-12 pl" Style="font-size:40px;color:#f5f5f5;text-align: center  " ><strong Style="color:rgb(253,224,19);">Mo </strong> <i class="material-icons" style="color:#f5f5f5;font-size:40px;">mic</i> cast </p>
           </div>
 
         </div>
       </div>
     </div>
-    <div class="col-xs-6 col-md-6 col-lg-6 Rtext">
-      <h1 class="page-header" style="color:#f5f5f5;"><strong Style="color:rgb(253,224,19);">Mo</strong>cast</h1>
+    <div class="col-xs-12 col-md-6 col-lg-6 Rtext">
+      <h2 class="page-header" style="color:#f5f5f5;"><strong Style="color:rgb(253,224,19);">Mo</strong>cast</h2>
       <p Style="color:#f5f5f5;">
         A podcast or generically netcast, is an episodic series of digital audio or video files which a user can download and listen to. It is often available for subscription, so that new episodes are automatically downloaded via web syndication to the user's own local computer, mobile application, or portable media player.[
       </p>
@@ -50,20 +50,20 @@
     </div>
   </div>
 </div>
-<div class=" col-xs-12 col-md-12 col-lg-12 container"  >
+<div class=" col-xs-12  col-md-12 col-lg-12 container"  >
   <div class="row" style="">
-    <div class=" col-xs-6 col-md-6 col-lg-6 Llogo">
+    <div class=" hidden-xs hidden-sm col-md-6 col-lg-6 Llogo">
       <div class="row ">
-        <div class=" col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-10 col-md-6 col-sm-6 col-lg-6">
+        <div class="   col-md-offset-3 col-lg-offset-3 col-xs-12 col-md-6  col-lg-6">
           <div class="row">
-            <p class="col-xs-12 pl" Style="font-size:40px;color:#212121; " ><strong Style="color:rgb(253,224,19);"><</strong> Freelance Projects <strong Style="color:rgb(253,224,19);">></strong></p>
+            <p class="col-xs-12 pl" Style="font-size:60px;color:#212121; text-align: center" ><strong Style="color:rgb(253,224,19);">< </strong><span class="glyphicon glyphicon-globe" aria-hidden="true"></span><strong Style="color:rgb(253,224,19);"> ></strong></p>
           </div>
 
         </div>
       </div>
     </div>
-    <div class="col-xs-6 col-md-6 col-lg-6 Rtext">
-      <h1 class="col-xs-12 page-header" Style="font-size:40px;color:#212121; " ><strong Style="color:rgb(253,224,19);"><</strong> Freelance Projects <strong Style="color:rgb(253,224,19);">></strong></h1>
+    <div class="col-xs-12 col-md-6 col-lg-6 Rtext">
+      <h2 class="col-xs-12 page-header" Style="font-size:35px;color:#212121; " ><strong Style="color:rgb(253,224,19);"><</strong> Freelance Projects <strong Style="color:rgb(253,224,19);">></strong></h2>
       <p Style="color:#212121;">
         A podcast or generically netcast, is an episodic series of digital audio or video files which a user can download and listen to. It is often available for subscription, so that new episodes are automatically downloaded via web syndication to the user's own local computer, mobile application, or portable media player.[
       </p>
