--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,9 +20,8 @@
     </div>
     <div class="right-c col-sm-6" [ngStyle]="{height:Height}">
 
-    <app-project></app-project>
-    <app-project></app-project>
-    <app-project></app-project>
+    <app-project *ngFor="let project of projects"  [project]="project" ></app-project>
+
     </div>
   </div>
 
