--- a/src/app/home/project/project.component.css
+++ b/src/app/home/project/project.component.css
@@ -1,10 +1,10 @@
 .container{
 
 color: rgba(250, 250, 250, 0.5);
-  padding-top:40px;
+  padding-top:10px;
   padding-left:40px;
   padding-right:40px;
-  padding-bottom:40px;
+  padding-bottom:10px;
   margin-bottom: 40px;
 
 
@@ -28,4 +28,20 @@ img{
 .summary p{
 
 
+}
+.links a{
+  display: inline-block;
+
+}
+.links a span{
+  color: rgba(255,214,9,0.4);
+margin-left:10px;
+
+}
+.links a span:hover{
+
+  color: rgba(255,214,9,0.99);
+}
+.page-header{
+  border-bottom:1px solid rgba(128, 128, 128, 0.29);
 }
