--- a/src/app/home/project/project.component.html
+++ b/src/app/home/project/project.component.html
@@ -8,19 +8,21 @@
         <div>
           <img src="{{project.imagePath}}" class="col-xs-12" alt="" >
         </div>
-<div style="padding-left: 20px">
-        <h4 class="">Owner:</h4>
-        <p>{{project.owner}}</p>
 
-</div>
       </div>
     </div>
     <div class="col-xs-offset-1 col-xs-8 summary">
       <div class="row">
-        <h4 class="page-header col-xs-12">{{project.name}}({{project.language}})</h4>
+        <h4 class="page-header col-xs-12">{{project.name}}  </h4>
         <p class="col-xs-12">{{project.summary}}</p>
 
     </div>
+   <div class="col-xs-offset-8 col-xs-12 links" style="margin-top:10px;">
+     <a href="#"><span style="font-size: 12px">{{project.language}}</span></a>
+    <a href="#">    <span class="glyphicon glyphicon-heart " aria-hidden="true" ></span></a>
+    <a href="#">    <span class="glyphicon glyphicon-link col-xs-offset-1"  aria-hidden="true" ></span></a>
+
+   </div>
 
 
     </div>
