--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -34,3 +34,38 @@ margin: 0px;
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(172, 143, 9);
 }
+.firstRow
+{
+  background: url("./images/firstRow.JPG") center center no-repeat;
+  background-size: cover;
+  height: 100%;
+  padding: 0px;
+}
+.wallpaper{
+
+padding-top: 80px;
+  background-color:rgba(33,33,33,0.85);
+
+  color: #212121;
+  height: 100%;
+}
+span
+{
+  padding-top:150px;
+  color:rgb(172, 143, 9);
+  font-size: 25px;
+}
+.question{
+  padding-top: 100px;
+  color:  rgb(172, 143, 9);
+  font-size: 35px;
+}
+.helloWorld{
+  font-size: 30px;
+
+}
+.laugh{
+padding-top: 0px;
+  font-size: 80px;
+  color:  rgb(255, 214, 9);
+}
