first row in  home component with typing effect

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -59,6 +59,7 @@ span
   padding-top: 100px;
   color:  rgb(172, 143, 9);
   font-size: 35px;
+  border-bottom: 1px solid rgba(140,140,140,0.4);
 }
 .helloWorld{
   font-size: 30px;
