--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,7 +39,8 @@
           <div class="row">
 
             <div class="details-c">
-              <img src="" alt="">
+              in process ...
+              <img src="" alt="sample-details">
               <h1></h1>
 
 
